@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2001/10/23 01:43:09 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2002/09/20 09:51:43 jlam Exp $
 
-DISTNAME=	libyahoo-0.18.2
+DISTNAME=	libyahoo-0.18.4
 CATEGORIES=	chat
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=libyahoo/}
 
@@ -8,12 +8,9 @@ MAINTAINER=	ken@246gt.com
 HOMEPAGE=	http://sourceforge.net/projects/libyahoo/
 COMMENT=	Yahoo! Messenger client library
 
-USE_BUILDLINK_ONLY=	YES
-GNU_CONFIGURE=		YES
-
-post-install:
-	cd ${WRKSRC}; for file in libyahoo-authors.h; do		\
-		${INSTALL_DATA} $${file} ${PREFIX}/include/libyahoo/$${file}; \
-	done
+USE_BUILDLINK2=		# defined
+GNU_CONFIGURE=		# defined
+USE_LIBTOOL=		# defined
+LIBTOOL_OVERRIDE=	${WRKSRC}/libtool
 
 .include "../../mk/bsd.pkg.mk"
