@@ -1,4 +1,4 @@
-# $NetBSD: buildlink.mk,v 1.2 2001/10/23 01:43:09 jlam Exp $
+# $NetBSD: buildlink.mk,v 1.3 2002/09/20 09:51:44 jlam Exp $
 #
 # This Makefile fragment is included by packages that use libyahoo.
 #
@@ -17,8 +17,8 @@ LIBYAHOO_BUILDLINK_MK=	# defined
 
 .include "../../mk/bsd.buildlink.mk"
 
-BUILDLINK_DEPENDS.libyahoo?=	libyahoo>=0.18.2
-BUILD_DEPENDS+=		${BUILDLINK_DEPENDS.libyahoo}:../../chat/libyahoo
+BUILDLINK_DEPENDS.libyahoo?=	libyahoo>=0.18.4
+DEPENDS+=		${BUILDLINK_DEPENDS.libyahoo}:../../chat/libyahoo
 
 EVAL_PREFIX+=				BUILDLINK_PREFIX.libyahoo=libyahoo
 BUILDLINK_PREFIX.libyahoo_DEFAULT=	${LOCALBASE}
